Minor fixes in PrismJS styling to align with our look and feel

--- a/web/app.css
+++ b/web/app.css
@@ -147,3 +147,9 @@ h1 {
 .title,.infos {
     margin: 0;
 }
+
+/* Align PrismJS theme to our styling */
+pre[class*=language-] {
+    background-color: white;
+    margin: 0;
+}
